fixed image sizing on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -111,6 +111,8 @@ section {
 
 .photo img {
     display: block;
+    max-width: 100%;
+    height: auto;
     border-radius: 10px;
 }
 
